force-app/main/default/objects/EYI_Car_Parking_Charge__c/EYI_Car_Parking_Charge__c.object-meta.xml
<CustomObject>
    <label>Car Parking Charge</label>
    <nameField>
        <displayFormat>CPC-{00000}</displayFormat>
        <label>Car Parking Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Parking Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>