force-app/main/default/objects/EYI_Car_Parking_Charge__c/fields/EYI_Car_Parking_Charge__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Parking_Charge__c</fullName>
    <label>Car Parking Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>