force-app/main/default/objects/EYI_Car_Parking_Charge__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Car Parking Charges</relationshipLabel>
    <relationshipName>Car_Parking_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>