force-app/main/default/objects/EYI_Car_Parking_Charge__c/fields/EYI_Status_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status_Valid_From__c</fullName>
    <label>Status Valid From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>