force-app/main/default/objects/EYI_Car_Parking_Charge__c/fields/EYI_Tower__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.EYI_Project__c</field>
            <operation>equals</operation>
            <valueField>EYI_Tower__c.EYI_Project_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Tower__c</referenceTo>
    <relationshipLabel>Car Parking Charges</relationshipLabel>
    <relationshipName>Car_Parking_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>