force-app/main/default/objects/EYI_Car_Parking_Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Car_Parking_Charge__c</columns>
    <columns>EYI_Parking_Type__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Tower__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>