force-app/main/default/objects/EYI_Car_Parking_Charge__c/listViews/newGroup_EYI_Car_Parking_Charge.listView-meta.xml
<ListView>
    <fullName>newGroup_EYI_Car_Parking_Charge</fullName>
    <filterScope>Queue</filterScope>
    <label>newGroup</label>
    <queue>newGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>